Fix alignment of block drawer stop icon (mw-ui-icon-flush)
In preparation for T232837 a class mw-ui-icon-flush has been added
to assure the stop icon aligns vertically with the heading

Bug: T232837

--- a/resources/mobile.editor.overlay/BlockMessageDetails.less
+++ b/resources/mobile.editor.overlay/BlockMessageDetails.less
@@ -3,6 +3,7 @@
 .block-message {
 	h5 {
 		font-weight: bold;
+		margin: 0;
 	}
 
 	h6 {
@@ -12,8 +13,6 @@
 
 .block-message-icon {
 	float: left;
-	width: 20%;
-	margin-top: 0.3em;
 }
 
 .block-message-info {
